--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -1,4 +1,7 @@
 # Taken from https://github.com/andyli/HaxeCI/blob/master/appveyor.yml
+
+name: Windows Build CI
+
 version: "{build}"
 
 environment:
